fix weird alignment

--- a/www/public/site.css
+++ b/www/public/site.css
@@ -332,6 +332,7 @@ main {
     margin: auto;
     padding: 12px;
     box-sizing: border-box;
+    align-content: start;
 }
 
 .welcome-to-roc {
